# ses-workshop-rust

./: Cargo.toml  README.md
part-1/task-1-interface-legacy-library/: Cargo.toml  README.md  build.rs
part-1/task-1-interface-legacy-library/src/: lib.rs  main.rs
part-1/task-1-interface-legacy-library/src/ffi/: bindings.rs
part-1/task-2-modify-shared-data-using-threads/: Cargo.toml  README.md
part-1/task-2-modify-shared-data-using-threads/src/: lib.rs
part-1/task-3-use-external-rust-libraries/: Cargo.toml  README.md
part-1/task-3-use-external-rust-libraries/src/: main.rs
part-2/usb-hotplug-listener/: Cargo.toml  README.md
part-2/usb-hotplug-listener/src/: main.rs
part-3/usb-api/: Cargo.toml  README.md
part-3/usb-api/src/: index.html  main.rs
