[package]
name = "usb-api"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Landgraf <andreas.landgraf@ses-imagotag.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
actix-web = "~3.3"
env_logger = "~0.9"
futures = "~0.3"
tokio = { version = "~1.16", features = ["sync"] }
rusb = "~0.9"
serde = "~1.0"
serde_json = "~1.0"